blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>One edition of an event, with its dates, venue and revenue targets. Every sponsor and exhibitor deal links to an event, so sales can be reported per edition and compared year on year.</description>
    <label>Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>