blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>Last day of the event.</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>