blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Event_lead__c.field-meta.xml
<CustomField>
    <fullName>Event_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member accountable for the event.</description>
    <label>Event lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Events Event lead</relationshipLabel>
    <relationshipName>Event_Event_lead</relationshipName>
    <type>Lookup</type>
</CustomField>