blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Event_type__c.field-meta.xml
<CustomField>
    <fullName>Event_type__c</fullName>
    <description>The format of the event, for reporting across the portfolio.</description>
    <label>Event type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Trade show</fullName>
            </value>
            <value>
                <fullName>Summit</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>