blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Exhibition_target__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_target__c</fullName>
    <description>Revenue target for stand sales. Compared with signed deals.</description>
    <label>Exhibition target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>