blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Expected_attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_attendees__c</fullName>
    <description>Forecast attendance, used in sponsor and exhibitor proposals.</description>
    <label>Expected attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>