blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Sponsorship_target__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_target__c</fullName>
    <description>Revenue target for sponsorship. Compared with signed deals.</description>
    <label>Sponsorship target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>