blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>First day of the event.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>