blueprints/events-sponsorship/salesforce/force-app/main/default/objects/Event__c/fields/Total_stand_sqm__c.field-meta.xml
<CustomField>
    <fullName>Total_stand_sqm__c</fullName>
    <description>Sellable floor area. Used to show how much space is left.</description>
    <label>Total stand space (sqm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>